# qr-code-labels

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/qr_code_labels/: main.py
