[project]
name = "qr-code-labels"
version = "0.1.0"
description = "Generate QR code smart labels for inventory, moving, etc"
dependencies = [
    "cairosvg>=2.8.2",
    "drawsvg>=2.4.1",
    "pypdf>=6.6.0",
    "segno>=1.6.6",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.12",
]
